# Unreal_CommandHelper

./: .gitignore  ASSETS_INDEX.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.husky/: post-commit  pre-commit
docs/: LAUNCHER.md  LINKS.md  SCHEDULER.md  TOOLBOX.md
package/: CHANGELOG.md  package.json
scripts/: bump-version.cjs
src/: App.tsx  config.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  progress_parser.rs  running_process.rs  stream_processor.rs  types.rs  utils.rs
src-tauri/src/commands/: batch_commit.rs  ide_detection.rs  mod.rs  monitor.rs  movie_render_queue.rs  plugin.rs  process.rs  projects.rs  regenerate.rs  registry.rs  shader.rs  umap.rs  uproject.rs
src/components/: AddEngineCard.tsx  AddProjectButton.tsx  BaseLayout.tsx  BatchCommitPanel.tsx  FileTree.tsx  LauncherCard.tsx  LauncherTab.tsx  LinkButton.tsx  LinksTab.tsx  MovieRenderQueuePanel.tsx  OutputLogPanel.tsx  PinnedJobCard.tsx  PluginHelperPanel.tsx  RegenerateProjectPanel.tsx  SchedulerTab.tsx  Select.tsx  SettingsPanel.tsx  ShaderBoosterBackground.tsx  ShaderBoosterPanel.tsx  StatusPanel.tsx  ToolBoxTab.tsx  ToolGroup.tsx  UProjectHelperPanel.tsx  UmapHelperPanel.tsx
src/config/: assets.ts
src/contexts/: EnginesContext.tsx  IdeContext.tsx  LogContext.tsx  ProgressContext.tsx  ProjectsContext.tsx  SettingsContext.tsx
src/hooks/: useAppActivity.ts  useEngines.ts  useIde.ts  (+7 more)
(+14 files in other folders)
