[package]
name = "ue-launcher"
version = "0.1.0"
description = "UE Launcher - Unreal Engine project launcher"
edition = "2021"
license = "MIT"

[lib]
name = "ue_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
winreg = "0.52"
walkdir = "2"
# windows = "0.58"  # Step 12: Process priority (features = ["Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"])
